# CFPQ-on-GPGPU

./: .gitattributes  .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  data.tar.xz  init.py  online_results.py  testing_system.py
CFPQ_Interface/naive_gpu/: gpu_matrix.cpp  gpu_matrix.h  main.cpp  multiplication.cu  multiplication.h  parameters.h
FSharp/: Brahma.FSharp.OpenCL.AST.xml  Brahma.FSharp.OpenCL.Extensions.xml  Brahma.FSharp.OpenCL.Printer.xml  Brahma.FSharp.OpenCL.Translator.xml  Brahma.OpenCL.xml  Brahma.xml  CFPQ_Matrix_Performance.exe.mdb  CFPQ_Matrix_Performance.xml  Conversions.dll.mdb  Core.dll.mdb  MatrixBasedParsing.dll.mdb  Parsing.Common.dll.mdb
GTgraph/R-MAT/: GTgraph-rmat
GTgraph/SSCA2/: GTgraph-ssca2
GTgraph/random/: GTgraph-random  log
cfpq-cpp/: Grammar.cpp  Grammar.h  Graph.cpp  Graph.h  Matrix.h  README.md
cuda/: methodOf4RusSubringGpu.cu  methodOf4RusSubringGpu.h
cuda/cutlass/: CutlassMatrix.cu  CutlassMatrix.h  main.cpp
cuda/cutlass8/: CutlassMatrix8Bit.cu  CutlassMatrix8Bit.h  main.cpp
cuda/methodOf4RusBooleanSemiringGpu/: Constants.h  cfpqM4RusGpu.cpp  gpuMemoryManagement.cu  gpuMemoryManagement.h  gpuTimer.cu  methodOf4RusBooleanSemiringGpu.cu  methodOf4RusBooleanSemiringGpu.h  methodOf4RusBooleanSemiringGpuTest.cu  methodOf4RusBooleanSemiringMatrix.cu  methodOf4RusBooleanSemiringMatrix.h
cuda/methodOf4RusSubringGpu/: methodOf4RusSubringGpu.cu  methodOf4RusSubringGpu.h  methodOf4RusSubringGpuTest.cu
cuda/naive-gpu/: GpuMatrix.cpp  Multiplication.cu  Multiplication.h  Parameters.h  main.cpp
cuda/naive-gpu-shared/: GpuMatrix.h  Multiplication.cu  main.cpp
cuda/utils/: gpuMemoryManagement.cu  gpuMemoryManagement.h  gpuTimer.cu  gpu_memory_management.cu  gpu_memory_management.h  gpu_timer.cu
data/bio/Grammars/: grammar.yrd
data/bio/Matrices/: out_0.txt  out_1.txt  out_2.txt  out_3.txt
data/bio/grammars/: grammar
data/bio/graphs/: out_0  out_2  out_3
data/graphs/: EvaluationCharacteristics.txt
data/graphs/FullGraph/Grammars/: A_star0.yrd  A_star1.yrd  A_star2.yrd
data/graphs/FullGraph/Matrices/: fullgraph_10.txt  fullgraph_100.txt  fullgraph_1000.txt  fullgraph_10000.txt  fullgraph_200.txt  fullgraph_2000.txt  fullgraph_25000.txt  fullgraph_50.txt  fullgraph_500.txt  fullgraph_5000.txt  fullgraph_50000.txt  fullgraph_80000.txt
data/graphs/MemoryAliases/: Matrices.tar.xz
data/graphs/MemoryAliases/Grammars/: mayAlias.yrd
data/graphs/RDF/: Matrices.tar.xz
data/graphs/RDF/Grammars/: GPPerf1_cnf.txt  GPPerf2_cnf.txt
data/graphs/RDF/Matrices/: 1.1.txt  1.1_x8.txt  atom-primitive.txt  atom-primitive_x8.txt  biomedical-mesure-primitive.txt  biomedical-mesure-primitive_x8.txt  foaf.txt  foaf_x8.txt  funding.txt  funding_x8.txt  generations.txt  generations_x8.txt  people_pets.txt  people_pets_x8.txt  pizza.txt  pizza_x8.txt  skos.txt  skos_x8.txt  travel.txt  travel_x8.txt  univ-bench.txt  univ-bench_x8.txt  wine.txt  wine_x8.txt
data/graphs/SG/Grammars/: SG.yrd
data/graphs/SG/Matrices/: G10k-0.01.txt  G10k-0.1.txt  G10k.txt  G20k.txt  G40k.txt  G5k.txt  G80k.txt
data/graphs/WorstCase/Grammars/: Brackets.txt
data/graphs/WorstCase/Matrices/: WorstCaseMatrix_10.txt  WorstCaseMatrix_11.txt  WorstCaseMatrix_12.txt  WorstCaseMatrix_13.txt  WorstCaseMatrix_14.txt  WorstCaseMatrix_15.txt  WorstCaseMatrix_3.txt  WorstCaseMatrix_4.txt  WorstCaseMatrix_5.txt  WorstCaseMatrix_6.txt  WorstCaseMatrix_7.txt  WorstCaseMatrix_8.txt  WorstCaseMatrix_9.txt
graphBlas/: graphblas_matrix.cpp  graphblas_matrix.h  main.cpp
implementations/: cfpq_m4Rus_gpu.cu
implementations/naive-gpu/: GpuMatrix.cpp  GpuMatrix.h  Multiplication.cu  Parameters.h  main.cpp
m4ri/: m4ri_matrix.cpp  m4ri_matrix.h  main.cpp
python/: main.py  math_utils.py  matmul.py  matrix_utils.py  parsing.py  parsing_utils.py  requirements.txt  utils.py
test_utils/: build_testset.py  install_requirements.sh  run_strategy.py  runners.py
